# Mini0nz

./: .gitignore  CLAUDE.md  Claude-Orchestrator.md  Copilot-Engineer.md  Gemini-Researcher.md  README.md  codex.agent.wrapper.sh  copilot.agent.wrapper.sh  gemini.agent.wrapper.sh  mcp_config.json  orchestrate.py  pyproject.toml  quadrumvirate-orchestration.md
.skills/: codex.agent.wrapper.sh  copilot.agent.wrapper.sh  gemini.agent.wrapper.sh  memory.json
docs/plans/: 2025-12-07-dashboard-design.md  2025-12-07-seamless-orchestration-design.md  2025-12-07-seamless-orchestration-implementation.md
orchestra/: README.md  pyproject.toml
orchestra/orchestra/: __init__.py  agents.py  config.py  dashboard.py  models.py  server.py  state.py
