[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orchestra"
version = "0.1.0"
description = "Multi-agent orchestration MCP server for autonomous AI collaboration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "aiofiles>=23.0.0",
]

[project.scripts]
orchestra = "orchestra.server:main"

[tool.hatch.build.targets.wheel]
packages = ["orchestra"]
